@@ -1,3 +1,9 @@
+Release XXX
+------------
+
+* You can now successfully retrieve a knowledgebase which has no
+  submodels (you don't get any RDF, but you don't get an error, either)
+
 Release 0.5.1, 2008 October 7
 -----------------------------
 
